--- a/public/screen.css
+++ b/public/screen.css
@@ -1,8 +1,23 @@
-html {
-  text-size-adjust: 100%;
-}
-
 body {
   margin: 0;
   font: 16px / 1 sans-serif;
+}
+
+.headerbox {
+  background-color: lightgrey;
+  display: flex;
+  align-items: center;
+
+}
+
+.logoimg {
+  width: 15%;
+}
+
+.nav ul {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  
+
 }
